# Flux3D

./: .gitignore  CMakeLists.txt  README.md  camera.h  glad.c  imgui.ini  main.cpp  model.cpp  model.h  shader_s.h
include/glad/: glad.h
libs/bullet3/: CMakeLists.txt
libs/bullet3/lib/: Bullet3Common_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath_Debug.lib
libs/glm/glm/gtx/: component_wise.hpp
shaders/: lighting.frag  lighting.vert
